<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:background="@color/white"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/activity_main_done"
    android:background="@color/white"
    >

    <ImageView
        android:src="@drawable/agenda"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp"
        android:id="@+id/header"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintTop_creator="1"
        app:layout_constraintRight_creator="1"
        app:layout_constraintBottom_creator="1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/activity_main_done"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/favorite"
        android:layout_marginBottom="16dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:src="@drawable/ic_star"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_editor_absoluteX="359dp"
        app:layout_editor_absoluteY="104dp"
        android:id="@+id/favorite"
        android:padding="5dp"
        android:contentDescription="Content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_creator="1"
        app:layout_constraintRight_creator="1"
        app:layout_constraintBottom_creator="0"
        tools:layout_editor_absoluteX="359dp"
        tools:layout_editor_absoluteY="104dp"
        app:layout_constraintTop_toTopOf="@+id/activity_main_done"
        tools:layout_constraintTop_creator="0"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="0"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_done"
        android:layout_marginBottom="16dp"
        tools:layout_constraintBottom_creator="0"
        app:layout_constraintVertical_bias="0.19"
        android:layout_marginRight="16dp" />


    <TextView
        android:text="@string/header_title"
        android:textColor="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="140dp"
        android:id="@+id/title"
        android:textSize="20sp"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="140dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="0"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:layout_marginTop="16dp"
        tools:layout_constraintTop_creator="0"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/nome"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="189dp"
        android:id="@+id/cameraLabel"
        android:labelFor="@+id/cameraType"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintBaseline_creator="1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="189dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
        tools:layout_constraintBaseline_creator="0"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/cameraType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/nome"
        android:textColorHint="@color/yellow"
        android:textColor="@color/blue"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/settings"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/settings"
        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="176dp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="0" />
    <TextView
        android:text="@string/phone"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="238dp"
        android:id="@+id/settingsLabel"
        android:labelFor="@+id/settings"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintBaseline_creator="1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="238dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings"
        tools:layout_constraintBaseline_creator="0"
        android:layout_marginLeft="16dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="phone"
        android:hint="@string/phone"
        android:textColorHint="@color/yellow"
        android:textColor="@color/blue"
        android:ems="10"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="225dp"
        android:id="@+id/settings"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintTop_creator="1"
        app:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/cameraType"
        android:layout_marginTop="8dp"
        tools:layout_constraintTop_creator="0"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria_1"
            android:textColor="@color/red"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria_2"
            android:textColor="@color/red"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="textEmailAddress"
        android:hint="@string/refer"
        android:textColorHint="@color/yellow"
        android:textColor="@color/blue"
        android:ems="10"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="225dp"
        android:id="@+id/referencia"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintTop_creator="1"
        app:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginTop="8dp"
        tools:layout_constraintTop_creator="0"
        app:layout_constraintRight_toRightOf="@+id/ref"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintStart_toEndOf="@+id/ref"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/refer"
        android:textColor="@color/red"
        app:layout_constraintBaseline_creator="1"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="238dp"
        tools:layout_constraintBaseline_creator="0"
        tools:layout_constraintLeft_creator="0" />

    <Button
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        app:layout_editor_absoluteX="307dp"
        app:layout_editor_absoluteY="538dp"
        android:id="@+id/upload"
        app:layout_constraintRight_creator="1"
        app:layout_constraintBottom_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="0"
        app:layout_constraintTop_toBottomOf="@+id/referencia"
        android:layout_marginBottom="16dp"
        tools:layout_constraintBottom_creator="0"
        android:layout_marginRight="16dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="cameraLabel,settingsLabel" />

    <EditText
        android:id="@+id/edtPesquisa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/blue"
        android:textColorHint="@color/yellow"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/ref"
        app:layout_constraintStart_toEndOf="@+id/ref"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/ref"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="225dp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="0" />

    <Button
        android:text="@string/search"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        app:layout_editor_absoluteX="307dp"
        app:layout_editor_absoluteY="538dp"
        android:id="@+id/bntPesquisar"
        app:layout_constraintRight_creator="1"
        app:layout_constraintBottom_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        app:layout_constraintTop_toBottomOf="@+id/edtPesquisa"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="0"
        android:layout_marginBottom="16dp"
        tools:layout_constraintBottom_creator="0"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/txtListagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/bntPesquisar" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>